-> fixing most of warnings -> added customeAlerts so the design is consistent -> fixed showing modal windows, added ModalHelper to make it easier to make them